Fixed additional packages' version requirements for security reasons

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
 beautifulsoup4==4.12.3
-certifi==2023.11.17
+certifi>=2024.07.04
 cfgv==3.4.0
 charset-normalizer==3.3.2
 deptree==0.0.12
 distlib==0.3.8
 filelock==3.13.1
 identify==2.5.33
-idna==3.6
+idna>=3.7
 importlib-metadata==7.0.1
 nodeenv==1.8.0
 pip-autoremove==0.10.0
 platformdirs==4.2.0
 pre-commit==3.6.0
 PyYAML==6.0.1
-requests==2.31.0
-setuptools==69.0.3
+requests>=2.32.0
+setuptools>=70.0.0
 soupsieve==2.5
-urllib3==2.1.0
+urllib3>=2.2.2
 virtualenv==20.26.6
-zipp==3.17.0
+zipp>=3.19.1
