--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,21 @@ beautifulsoup4==4.12.3
 certifi>=2024.07.04
 cfgv==3.4.0
 charset-normalizer==3.3.2
+colorama==0.4.6
 deptree==0.0.12
 distlib==0.3.8
 filelock==3.13.1
 identify==2.5.33
 idna>=3.7
 importlib-metadata==7.0.1
+iniconfig==2.0.0
 nodeenv==1.8.0
+packaging==24.2
 pip-autoremove==0.10.0
 platformdirs==4.2.0
-pre-commit==3.6.0
+pluggy==1.5.0
+pre-commit==3.5.0
+pytest==8.3.4
 PyYAML==6.0.1
 requests>=2.32.0
 setuptools>=70.0.0
