Modified circleci config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,24 +4,16 @@ orbs:
   aws-cli: circleci/aws-cli@5.1.2
   aws-s3: circleci/aws-s3@4.1.0
 jobs:
-  build:
+  build_and_test:
     executor: python/default
     steps:
       - checkout
       - python/install-packages:
           pkg-manager: pip
-  test:
-    executor: python/default
-    steps:
       - run:
           name: Run tests using Pytest
-          command: python -m pytest
-      - store_test_results:
-          path: test-results
+          command: pytest -vvv
 workflows:
   build-test-deploy:
     jobs:
-      - build
-      - test:
-          requires:
-            - build
+      - build_and_test
