--- a/.circleci/deploy_to_s3.yml
+++ b/.circleci/deploy_to_s3.yml
@@ -2,15 +2,17 @@ version: 2.1
 
 jobs:
   build-deploy:
-    - deploy:
-      filters:
-        branches:
-          only: main
-
-workflows:
-  deploy_to_aws_s3:
     executor: aws-cli/default
     steps:
       - run:
         name: Deploy to AWS S3
         command: aws s3 sync . s3://web-scraper
+
+workflows:
+  deploy_to_aws_s3:
+    jobs:
+      - build-deploy:
+          filters:
+            branches:
+              only:
+                - main
