--- a/.circleci/deploy_to_s3.yml
+++ b/.circleci/deploy_to_s3.yml
@@ -4,9 +4,7 @@ jobs:
   build-deploy:
     executor: aws-cli/default
     steps:
-      - run:
-        name: Deploy to AWS S3
-        command: aws s3 sync . s3://web-scraper
+      - run: aws s3 sync . s3://web-scraper
 
 workflows:
   deploy_to_aws_s3:
