--- a/.circleci/deploy_to_s3.yml
+++ b/.circleci/deploy_to_s3.yml
@@ -1,16 +1,19 @@
 version: 2.1
 orbs:
+  aws-s3: circleci/aws-s3@4.1.0
   aws-cli: circleci/aws-cli@5.1
 jobs:
-  build-deploy:
+  aws-cli-install:
     executor: aws-cli/default
     steps:
-      - run: aws s3 sync . s3://web-scraper
+      - aws-cli/setup:
+        profile_name: aws-s3-superuser
+      - run: aws s3 ls
 
 workflows:
   deploy_to_aws_s3:
     jobs:
-      - build-deploy:
+      - deploy:
           filters:
             branches:
               only:
