Fixed job name in workflows

--- a/.circleci/deploy_to_s3.yml
+++ b/.circleci/deploy_to_s3.yml
@@ -13,7 +13,7 @@ jobs:
 workflows:
   deploy_to_aws_s3:
     jobs:
-      - deploy:
+      - aws-cli-install:
           filters:
             branches:
               only:
