Modified deployment config run command

--- a/.circleci/deploy_to_s3.yml
+++ b/.circleci/deploy_to_s3.yml
@@ -9,7 +9,7 @@ jobs:
       - checkout
       - aws-cli/setup:
         profile_name: aws-s3-superuser
-      - run: aws s3 sync . s3://web-scraper
+      - run: aws configure --profile aws-s3-superuser && aws s3 sync . s3://web-scraper
 
 workflows:
   deploy_to_aws_s3:
