--- a/.circleci/deploy_to_s3.yml
+++ b/.circleci/deploy_to_s3.yml
@@ -9,7 +9,10 @@ jobs:
       - checkout
       - aws-cli/setup:
         profile_name: aws-s3-superuser
-      - run: aws configure --profile aws-s3-superuser && aws configure set aws_access_key_id ${AWS_ACCESS_KEY_ID} && aws configure set aws_secret_access_key ${AWS_SECRET_ACCESS_KEY} && aws configure set aws_region ${AWS_REGION} && aws s3 sync . s3://web-scraper
+        aws_access_key_id: $AWS_ACCESS_KEY_ID
+        aws_secret_access_key: $AWS_SECRET_ACCESS_KEY
+        aws_region: $AWS_REGION
+      - run: aws s3 sync . s3://aws-web-scraper
 
 workflows:
   deploy_to_aws_s3:
