--- a/.circleci/aws_deploy.yml
+++ b/.circleci/aws_deploy.yml
@@ -3,18 +3,20 @@ orbs:
   aws-s3: circleci/aws-s3@4.1.0
   aws-cli: circleci/aws-cli@5.1
 jobs:
-  aws-cli-install:
+  aws_deploy:
     executor: aws-cli/default
     steps:
       - checkout
       - aws-cli/setup:
         profile_name: aws-s3-superuser
-      - run: aws s3 sync . s3://aws-web-scraper
+      - run:
+        name: Sync files to S3
+        command: aws s3 sync . s3://aws-web-scraper
 
 workflows:
-  deploy_to_aws_s3:
+  aws-deploy:
     jobs:
-      - aws-cli-install:
+      - aws_deploy:
           filters:
             branches:
               only:
