--- a/.circleci/aws_deploy.yml
+++ b/.circleci/aws_deploy.yml
@@ -1,23 +1,21 @@
 version: 2.1
 orbs:
-  aws-s3: circleci/aws-s3@4.1.0
-  aws-cli: circleci/aws-cli@5.1
+    aws-s3: circleci/aws-s3@4.1.0
+    aws-cli: circleci/aws-cli@5.1
 jobs:
-  aws_deploy:
-    executor: aws-cli/default
-    steps:
-      - checkout
-      - aws-cli/setup:
-        profile_name: aws-s3-superuser
-      - run:
-        name: Sync project to AWS S3 Bucket
-        command: aws s3 sync . s3://aws-web-scraper
+    aws_deploy:
+        executor: aws-cli/default
+        steps:
+            - checkout
+            - aws-cli/setup:
+              profile_name: aws-s3-superuser
+            - run: aws s3 sync . s3://aws-web-scraper
 
 workflows:
-  aws-deploy:
-    jobs:
-      - aws_deploy:
-          filters:
-            branches:
-              only:
-                - main
+    aws-deploy:
+        jobs:
+            - aws_deploy:
+                  filters:
+                      branches:
+                          only:
+                              - main
